# ifup-systemd-resolved

./: .clang-format  .cz.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LICENSE.txt  README.md  ifup-systemd-resolved.sh  org.freedesktop.resolve1.Manager.xml  package.json  vcpkg.json
.github/workflows/: cmake.yml  codeql.yml  pages.yml  qa.yml  tests.yml
man/: ifup-systemd-resolved.1
src/: CMakeLists.txt  constants.h  main.cpp  manager.xml  specialtypes.cpp  specialtypes.h  test.cpp  up.cpp  up.h
